centred images, text.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   </style>
 </head>
 <body>
-  <h1>Snap Random</h1>
-  <p>Default image size, even color distribution.</p>
-  <div class="SnapRandom"></div>
-  <p>Facebook cover size, should be greenish blue.</p>
-  <div class="SnapRandom" data-red="64" data-green="200" data-blue="128" data-width="831" data-height="315"></div>
-	<p>Another example, now 300x400 and purplish.</p>
-  <div class="SnapRandom" data-red="160" data-green="50" data-blue="180" data-width="400" data-height="300"></div>
+  <center>
+    <h1>Snap Random</h1>
+    <p>Default image size, even color distribution.</p>
+    <div class="SnapRandom"></div>
+    <p>Facebook cover size, should be greenish blue.</p>
+    <div class="SnapRandom" data-red="64" data-green="200" data-blue="128" data-width="831" data-height="315"></div>
+  	<p>Another example, now 300x400 and purplish.</p>
+    <div class="SnapRandom" data-red="160" data-green="50" data-blue="180" data-width="400" data-height="300"></div>
+  </center>
   <!-- THE SCRIPTS YOU'LL NEED -->
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script src="jquery.imagesloaded.min.js"></script>
